--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Git Hub init </h1>
     <p>New Repo</p>
-    <p>This is a new Feature(button)</p>
+    <p>This is a new Feature(dropdown)</p>
 
 </body>
 </html>
